# tardigrade-tracking

./: .gitignore  C2 tuns min distance.txt  README.md  check_args.py  flake.nix  info.md  make_tif.py  make_video.sh  pyproject.toml  text.md  usage.md
notebooks/: blob.py  chan-vese.py  csv_process.py  explore.py  filter_data.py  new_image.py  new_images.py  preprocess.py  preprocess_cuda.ipynb  preprocess_cuda.py  preprocess_gpu.py  preprocess_v2.py  preview_labels.py  sam.py  sam_video.py
src/: binarize_video.py  box_feret_objexts.py  box_graphs.py  box_graphs_objects.py  create_charts.py  create_dataset.py  create_datasets.py  data.py  datasets_charts.py  extract_labels.py  graph_violin.py  graphs.py  info.py  log.py  process.py  process_track.py  process_video.py  rescale_video.py  save.py  track_and_visualize.py  track_and_visualize_v2.py  video_to_images.py  watershed_image.py  watershed_video.py
src/sam/: process.py  test.py  test2.py  test3.py
src/watershed/: process.py  process_gpu.py
