[project]
name = "tardigrade-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "cucim>=23.10.0",
    "cupy-cuda12x>=13.6.0",
    "imageio[pyav]>=2.37.0",
    "lxml>=6.0.2",
    "marimo>=0.17.0",
    "matplotlib>=3.10.6",
    "msgspec>=0.19.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pydantic-settings>=2.11.0",
    "pygal>=3.0.5",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "scikit-image>=0.25.2",
    "supervision>=0.27.0",
    "torch>=2.9.1",
    "ultralytics>=8.3.232",
]

[dependency-groups]
dev = []
